# pyDesktop3

./: .gitignore  MANIFEST.in  PKG-INFO  README.md  README.rst  README.txt  cute.py  desktop.py  requirements.txt  setup.cfg  setup.py
desktop/: __init__.py  dialog.py  windows.py
docs/: COPYING.txt  LICENCE.txt
tests/: test this.py  test_dialog.py
tools/: apidocs.sh
