[metadata]
name = desktop3
version = 0.5.2
description = Simple desktop integration for Python.
author = Paul Boddie
author_email = paul@boddie.org.uk
maintainer = eight04
maintainer_email = eight04@gmail.com

keywords =
    desktop, startfile, DESKTOP_LAUNCH, KDE, KDE4, GNOME, XFCE, XFCE4, Lubuntu
    dialog, kdialog, zenity, Xdialog, X11, start, open, opener, launch
    launcher
    
license = LGPLv3+
long_description = file: README.rst
url = https://github.com/eight04/pyDesktop3
platforms = any

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Natural Language :: Chinese (Traditional)
    Environment :: MacOS X
    Environment :: Other Environment
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Environment :: X11 Applications :: Gnome
    Environment :: X11 Applications :: KDE
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Desktop Environment :: Window Managers :: XFCE
    Topic :: Utilities

[options]
zip_safe = True
packages = find:

[vpip]
command_fallback = python cute.py
